Archive2/35/a5deb4e16bfd3d/output
main.cpp:59:7: error: no viable overloaded '='
    s = "JAB";
    ~ ^ ~~~~~
main.cpp:33:17: note: candidate function not viable: no known conversion from 'const char [4]' to 'const String' for 1st argument
String& String::operator=(const String& x)
                ^
1 error generated.
